--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
         </main>
 
     </main1>
+
+    <section class="grid">
+        <div class="row1"></div>
+        <div class="row2"></div>
+        <div class="row3"></div>
+        <div class="row4"></div>
+        <div class="row5"></div>
+         
+
+    </section>
 </body>
 
 </html>
