--- a/index.html
+++ b/index.html
@@ -45,6 +45,31 @@
          
 
     </section>
+    <div id="grid1">
+        <div class="item">
+            <img class="bill" src="bill.jfif" alt="Hello">
+            <p class="billdata">heloo my namme is bill gate si am ffrom the us annd whre u from can i help you</p>
+        </div>
+        <div class="item">
+            <img class="bill" src="bill.jfif" alt="Hello">
+            <p class="billdata">heloo my namme is bill gate si am ffrom the us annd whre u from can i help you</p>
+        </div>
+        <div class="item">
+            <img class="bill" src="bill.jfif" alt="Hello">
+            <p class="billdata">heloo my namme is bill gate si am ffrom the us annd whre u from can i help you</p>
+        </div>
+        <div class="item">
+            <img class="bill" src="bill.jfif" alt="Hello">
+            <p class="billdata">heloo my namme is bill gate si am ffrom the us annd whre u from can i help you</p>
+        </div>
+        <div class="item"><img class="bill" src="bill.jfif" alt="Hello">
+            <p class="billdata">heloo my namme is bill gate si am ffrom the us annd whre u from can i help you</p>
+        </div>
+        <div class="item">
+            <img class="bill" src="bill.jfif" alt="Hello">
+            <p class="billdata">heloo my namme is bill gate si am ffrom the us annd whre u from can i help you</p>
+        </div>
+      </div>
 </body>
 
 </html>
