--- a/index.html
+++ b/index.html
@@ -48,28 +48,32 @@
     <div id="grid1">
         <div class="item">
             <img class="bill" src="bill.jfif" alt="Hello">
-            <p class="billdata">heloo my namme is bill gate si am ffrom the us annd whre u from can i help you</p>
+            <p class="billdata">heloo my namme is bill gate si am ffrom the us <br> annd whre u from can i help you</p>
         </div>
         <div class="item">
             <img class="bill" src="bill.jfif" alt="Hello">
-            <p class="billdata">heloo my namme is bill gate si am ffrom the us annd whre u from can i help you</p>
+            <p class="billdata">heloo my namme is bill gate si am ffrom the usbr <br>
+                 annd whre u from can i help you</p>
         </div>
         <div class="item">
             <img class="bill" src="bill.jfif" alt="Hello">
-            <p class="billdata">heloo my namme is bill gate si am ffrom the us annd whre u from can i help you</p>
+            <p class="billdata">heloo my namme is bill gate si am ffrom the us <br> annd whre u from can i help you</p>
         </div>
         <div class="item">
             <img class="bill" src="bill.jfif" alt="Hello">
-            <p class="billdata">heloo my namme is bill gate si am ffrom the us annd whre u from can i help you</p>
+            <p class="billdata">heloo my namme is bill gate si am ffrom the  <br>us annd whre u from can i help you</p>
         </div>
         <div class="item"><img class="bill" src="bill.jfif" alt="Hello">
-            <p class="billdata">heloo my namme is bill gate si am ffrom the us annd whre u from can i help you</p>
+            <p class="billdata">heloo my namme is bill gate si am ffrom  <br>the us annd whre u from can i help you</p>
         </div>
         <div class="item">
             <img class="bill" src="bill.jfif" alt="Hello">
-            <p class="billdata">heloo my namme is bill gate si am ffrom the us annd whre u from can i help you</p>
+            <p class="billdata">heloo my namme is bill gate si am ffrom  <br>the us annd whre u from can i help you</p>
         </div>
       </div>
+      <footer class="footer">
+        
+      </footer>
 </body>
 
 </html>
